# DrinksBar_Qt_for_MCU

./: CMakeLists.txt  DrinksBar.qml  DrinksBar.qmlproject  LICENSE.txt  ReadMe.md  board_config.h
DrinkbarConfiguration/: Configuration.qml  DrinkBarConfiguration.qmlproject
assets/: j.json
fatfs/: fatfsfilesystem.h
i18n/: DrinksBar_ja_JP.ts
interface/: DateTimeProvider.h  DrinksModel.h  SystemInterface.cpp  SystemInterface.h
os/baremetal/: main.cpp
stm/: board_config.cpp
ui/: ConfirmationScreen.qml  CoolDrinkSelectScreen.qml  EnjoyMegScreen.qml  FreshJuiceSelectScreen.qml  HotCoolSelectScreen.qml  HotDrinkSelectScreen.qml  PreparingDrinkScreen.qml  SettingsDialog.qml  SizeSelectScreen.qml  SugarLevelSelectScreen.qml  TopBar.qml
